# CRo_assignment

./: README.md  exceptions.py  functions.py  main.py  pyproject.toml  setup_logging.py  test_func_delete_rows.py  tests.py
ukol1/: README.md
ukol1/src/: exceptions_task1.py  functions_task1.py  main.py  tests_task1.py
ukol2/: README.md
ukol2/src/: exceptions.py  functions.py  main.py  setup_logging.py  tests.py
